tests/typing/good/testfile-variance-3.scala

class A[+T](x: T) { val f: T = x }
object Main { def main(args: Array[String]) { } }
