tests/typing/bad/testfile-variance-13.scala

class A[T] {}
class B[+T] extends A[T] {}
object Main { def main(args: Array[String]) { } }
